--- a/locales/en.json
+++ b/locales/en.json
@@ -5,7 +5,7 @@
       "title": [
         {
           "text": "Chalk Schools",
-          "url": "http://www.room77.com?new=1"
+          "url": "http://chalkschools.com"
         },
         ", Software Engineer: Jan 2014 - Current"
       ],
