--- a/locales/en.json
+++ b/locales/en.json
@@ -10,9 +10,10 @@
         ", Software Engineer: Jan 2014 - Current"
       ],
       "notesInProgress": [
-        ["One of the first engineers on the team, helped develop an engineering culture that emphasizes:"],
+        ["Helped create the engineering culture as an early employee"],
         ["Working code through full code coverage and strong integration specs"],
-        ["Dedication to school employees and parents through responsive support"]
+        ["Dedication to school employees and parents through responsive support"],
+        ["Work on full stack of site, from "]
       ]
     },
     {
