Add to Chalk resume

--- a/locales/en.json
+++ b/locales/en.json
@@ -9,11 +9,11 @@
         },
         ", Software Engineer: Jan 2014 - Current"
       ],
-      "notesInProgress": [
+      "notes": [
         ["Helped create the engineering culture as an early employee"],
-        ["Working code through full code coverage and strong integration specs"],
-        ["Dedication to school employees and parents through responsive support"],
-        ["Work on full stack of site, from "]
+        ["Practice agile development through full code coverage and strong integration specs"],
+        ["Focus on customer satisfaction through integrating user feedback and responsive support"],
+        ["Comfortable with full stack of website development, from code architecting to frontend design"]
       ]
     },
     {
