--- a/locales/en.json
+++ b/locales/en.json
@@ -87,6 +87,11 @@
         {
           "url": "http://www.sfgate.com/music/slideshow/Outside-Lands-2014-91325.php",
           "text": "acroyoga"
+        },
+        ", ",
+        {
+          "url": "/human-centered-design",
+          "text": "social change"
         }
       ]
     }
