--- a/locales/en.json
+++ b/locales/en.json
@@ -2,13 +2,16 @@
   "metaDescription": "Personal site of Holman Gao, software engineer at Chalk Schools, University of Maryland and Blair Magnet alum, living in San Francisco",
   "work": [
     {
-      "title": [
-        {
-          "text": "Chalk Schools",
-          "url": "http://chalkschools.com"
-        },
-        ", Software Engineer: Jan 2014 - Current"
-      ],
+      "title": {
+        "left": [
+          {
+            "text": "Chalk Schools",
+            "url": "http://chalkschools.com"
+          },
+          ", Software Engineer"
+        ],
+        "right": ["San Francisco, CA: Jan 2014 - Current"]
+      },
       "notes": [
         ["Helped create the engineering culture as an early employee"],
         ["Practice agile development through full code coverage and strong integration specs"],
@@ -18,13 +21,16 @@
       ]
     },
     {
-      "title": [
-        {
-          "text": "Room 77",
-          "url": "http://www.room77.com?new=1"
-        },
-        ", Software Engineer: Jul 2012 - Jan 2014"
-      ],
+      "title": {
+        "left": [
+          {
+            "text": "Room 77",
+            "url": "http://www.room77.com?new=1"
+          },
+          ", Software Engineer"
+        ],
+        "right": ["Mountain View, CA: Jul 2012 - Jan 2014"]
+      },
       "notes": [
         [
           "Developer on mobile app [",
@@ -68,7 +74,10 @@
   ],
   "education": [
     {
-      "title": ["University of Maryland, BS, Computer Engineering and Mathematics: Class of 2012"],
+      "title": {
+        "left": ["University of Maryland, BS, Computer Engineering and Mathematics"],
+        "right": ["College Park, MD: Class of 2012"]
+      },
       "notes": [
         [
           {
@@ -80,7 +89,10 @@
       ]
     },
     {
-      "title": ["Montgomery Blair Magnet Program: Class of 2008"]
+      "title": {
+        "left": ["Montgomery Blair Magnet Program"],
+        "right": ["Silver Spring, MD: Class of 2008"]
+      }
     }
   ],
   "other": [
@@ -89,28 +101,44 @@
         "Volunteering:"
       ],
       "notes": [
-        [
-          { "text": "First Graduate", "url": "http://firstgraduate.org/" },
-          ", Academic Coach: Nov 2014 - Current"
-        ],
-        [
-          { "text": "Mission Graduates", "url": "http://www.missiongraduates.org/" },
-          ", Math Tutor: Mar 2014 - Current"
-        ],
-        [
-          { "text": "Eastside High School", "url": "http://www.eastside.org/" },
-          ", Math Tutor: Mar 2013 - Nov 2013"
-        ],
-        [
-          { "text": "Ronald McDonald House", "url": "http://www.ronaldhouse.net/" },
-          ", CLIK Room Supervisor: Mar 2013 - Nov 2013"
-        ],
-        [
-          {
-            "text": "Smithsonian Freer and Sackler Galleries",
-            "url": "http://www.asia.si.edu/events/imaginasia.asp"
-          },
-          ", ImaginAsia Family Program Volunteer: June 2006 - May 2012"]
+        {
+          "left": [
+            { "text": "First Graduate", "url": "http://firstgraduate.org/" },
+            ", Academic Coach"
+          ],
+          "right": ["San Francisco, CA: Nov 2014 - Current"]
+        },
+        {
+          "left": [
+            { "text": "Mission Graduates", "url": "http://www.missiongraduates.org/" },
+            ", Math Tutor"
+          ],
+          "right": ["San Francisco, CA: Mar 2014 - Current"]
+        },
+        {
+          "left": [
+            { "text": "Eastside High School", "url": "http://www.eastside.org/" },
+            ", Math Tutor"
+          ],
+          "right": ["East Palo Alto, CA: Mar 2013 - Nov 2013"]
+        },
+        {
+          "left": [
+            { "text": "Ronald McDonald House", "url": "http://www.ronaldhouse.net/" },
+            ", CLIK Room Supervisor"
+          ],
+          "right": ["Palo Alto, CA: Mar 2013 - Nov 2013"]
+        },
+        {
+          "left": [
+            {
+              "text": "Smithsonian Freer and Sackler Galleries",
+              "url": "http://www.asia.si.edu/events/imaginasia.asp"
+            },
+            ", ImaginAsia Family Program Volunteer"
+          ],
+          "right": ["Washington, DC: June 2006 - May 2012"]
+        }
       ]
     },
     {
