Updates to text

--- a/locales/en.json
+++ b/locales/en.json
@@ -98,7 +98,7 @@
   "other": [
     {
       "title": [
-        "Volunteering:"
+        "Volunteer Experience:"
       ],
       "notes": [
         {
@@ -154,7 +154,7 @@
           ", ",
           {
             "url": "/human-centered-design",
-            "text": "social change"
+            "text": "human-centered design"
           }
         ]
       ]
