--- a/locales/en.json
+++ b/locales/en.json
@@ -143,7 +143,7 @@
     },
     {
       "title": [
-        "Interests:"
+        "Links:"
       ],
       "notes": [
         [
@@ -155,12 +155,23 @@
           {
             "url": "/human-centered-design",
             "text": "human-centered design"
+          },
+          ", ",
+          {
+            "url": "/donations-pledge",
+            "text": "my donations pledge"
           }
         ]
       ]
     }
   ],
   "donations": [
+    {
+      "year": 2015,
+      "organization": {
+        "text": "TBD"
+      }
+    },
     {
       "year": 2014,
       "organization": {
