--- a/locales/en.json
+++ b/locales/en.json
@@ -92,7 +92,7 @@
       "notes": [
         [
           {
-            "url": "http://www.newsdesk.umd.edu/engaged/release.cfm?ArticleID=2429",
+            "url": "http://icpc.baylor.edu/worldfinals/teams/2011",
             "text": "Participant"
           },
           " in the 2011 ACM-ICPC World Finals"
