Fixing mobile styling

--- a/locales/en.json
+++ b/locales/en.json
@@ -146,7 +146,7 @@
               "text": "Smithsonian Freer and Sackler Galleries",
               "url": "http://www.asia.si.edu/events/imaginasia.asp"
             },
-            ", ImaginAsia Family Program Volunteer"
+            ", ImaginAsia Family Program"
           ],
           "right": ["Washington, DC: June 2006 - May 2012"]
         }
