Update personnel size of company

--- a/locales/en.json
+++ b/locales/en.json
@@ -28,6 +28,7 @@
         ["Practice agile development through full code coverage and strong integration specs"],
         ["Focus on customer satisfaction through integrating user feedback and responsive support"],
         ["Comfortable with full stack of website development, from code architecting to frontend design"],
+        ["Joined the team when the company had 3 employees (2 engineers)"],
         ["Stack includes Rails, plain JavaScript, Haml, Sass, PostgreSQL, Heroku"]
       ]
     },
@@ -56,6 +57,7 @@
           },
           "]"
         ],
+        ["Joined the team when the company had 15 employees (6 engineers)"],
         ["Designed and implemented a native-like HTML5 and Angular JS single-page mobile app framework"],
         [
           "Author and maintainer of ",
