Adding to resume

--- a/locales/en.json
+++ b/locales/en.json
@@ -98,6 +98,13 @@
             "text": "Participant"
           },
           " in the 2011 ACM-ICPC World Finals"
+        ],
+        [
+          "Phi Beta Kappa, ",
+          {
+            "text": "Phillip Merrill Presidential Scholar",
+            "url": "http://www.ugst.umd.edu/merrill/scholarsmpsp2011.html#gao"
+          }
         ]
       ]
     },
