--- a/locales/en.json
+++ b/locales/en.json
@@ -126,7 +126,7 @@
             "url": "https://github.com/stephenball1/Twinkle",
             "text": "Circl Dating App"
           },
-          " – Winner of the Firebase sponsor prize at the 2015 LAUNCH Hackathon"
+          " – A social dating app designed so you can be involved with choosing your friend's dates.  Built for Android.  Winner of the Firebase sponsor prize at the 2015 LAUNCH Hackathon"
         ],
         [
           {
