--- a/locales/en.json
+++ b/locales/en.json
@@ -5,10 +5,10 @@
       "title": "Holman Gao"
     },
     "hcd": {
-      "title": "Human-Centered Design — Holman Gao"
+      "title": "Human-Centered Design"
     },
     "donations": {
-      "title": "Donations Pledge — Holman Gao"
+      "title": "Donations Pledge"
     }
   },
   "work": [
