--- a/locales/en.json
+++ b/locales/en.json
@@ -25,8 +25,8 @@
       },
       "notes": [
         ["Helped create the engineering culture as an early employee"],
-        ["Practice agile development through full code coverage and strong integration specs"],
-        ["Focus on customer satisfaction through integrating user feedback and responsive support"],
+        ["Practice agile development through full code coverage and strong integration tests"],
+        ["Focus on customer satisfaction through integrating user feedback and fast response times to support requests"],
         ["Comfortable with full stack of website development, from code architecting to frontend design"],
         ["Joined the team when the company had 3 employees (2 engineers)"],
         ["Stack includes Rails, combination of React and vanilla JavaScript, Haml, Sass, PostgreSQL, Heroku"]
@@ -44,8 +44,9 @@
         "right": ["San Francisco, CA: Mar ’15 – Current"]
       },
       "notes": [
-        ["Work directly with the founders on product and technical strategy"],
-        ["Designed and coded the landing site (which uses Rails, Angular JS)"]
+        ["Work directly with the founders on product strategy"],
+        ["Designed and coded the landing site (which uses Rails, Angular JS)"],
+        ["Conduct product and technical interviews"]
       ]
     },
     {
@@ -59,6 +60,7 @@
         ],
         "right": ["Mountain View, CA: Jul ’12 – Jan ’14"]
       },
+      "numInitialNotesToShow": 2,
       "notes": [
         [
           "Developer on mobile app [",
@@ -178,6 +180,7 @@
       "title": [
         "Volunteer Experience:"
       ],
+      "numInitialNotesToShow": 2,
       "notes": [
         {
           "left": [
