--- a/locales/en.json
+++ b/locales/en.json
@@ -172,7 +172,7 @@
             "url": "https://github.com/golmansax/my-site-in-express",
             "text": "Personal site"
           },
-          " – uses Express and React"
+          " – uses Express and React in ES6"
         ]
       ]
     },
