--- a/locales/en.json
+++ b/locales/en.json
@@ -18,6 +18,9 @@
 		},
 		"sideProjects": {
 			"title": "Side Projects"
+		},
+		"communityProjects": {
+			"title": "Efforts in Community"
 		}
 	},
 	"workProjects": [
@@ -98,7 +101,51 @@
 			]
 		}
 	],
-  "sideProjects": [],
+  "sideProjects": [
+    {
+      "name": "Circl Dating App",
+      "description": "Dating app",
+      "stack": "Android app in Java",
+      "involvedWith": []
+    },
+    {
+      "name": "Chip In",
+      "description": "Volunteer platform",
+      "stack": "Rails, AngularJS",
+      "involvedWith": []
+    },
+    {
+      "name": "Personal Site",
+      "url": "http://golmansax.com",
+      "description": "Personal website",
+      "stack": "ExpressJS, ES6, ReactJS",
+      "involvedWith": []
+    },
+    {
+      "name": "Office Street View",
+      "description": "Navigate through an office and meet the employees!",
+      "stack": "AngularJS, Sass, PHP",
+      "involvedWith": []
+    }
+  ],
+  "communityProjects": [
+    {
+      "name": "Volunteering",
+      "description": "Places I have volunteered with",
+      "involvedWith": []
+    },
+    {
+      "name": "My Donations Pledge",
+      "description": "I pledged to do that",
+      "involvedWith": []
+    },
+    {
+      "name": "Human-Centered Design course",
+      "description": "Acumen course",
+      "pdf": "https://docs.google.com/viewer?srcid=0BzCKqkqhnFJQRFFyTDZFQ1R6OGs&pid=explorer&efh=false&a=v&chrome=false&embedded=true",
+      "involvedWith": []
+    }
+  ],
 	"work": [
 		{
 			"title": {
