Start portfolio page

--- a/locales/en/app.json
+++ b/locales/en/app.json
@@ -5,7 +5,7 @@
 			"title": "Holman Gao"
 		},
 		"portfolio": {
-			"title": "Holman Gao / Portfolio"
+			"title": "Portfolio"
 		},
 		"hcd": {
 			"title": "Human-Centered Design"
