--- a/locales/en/community_projects.json
+++ b/locales/en/community_projects.json
@@ -2,7 +2,7 @@
 	"metaData": {
     "title": "Efforts in Community"
 	},
-	"communityProjects": [
+	"projects": [
 		{
       "slug": "volunteering",
 			"name": "Volunteering",
