Updates to side projects

--- a/locales/en/community_projects.json
+++ b/locales/en/community_projects.json
@@ -51,7 +51,7 @@
 		},
 		{
       "slug": "human-centered-design",
-			"name": "Human-Centered Design Project",
+			"name": "Human-Centered Design",
 			"description": "Acumen course",
       "images": [
         "/static/human-centered-design.jpg"
