--- a/locales/en/side_projects.json
+++ b/locales/en/side_projects.json
@@ -3,7 +3,8 @@
     {
       "slug": "circl",
       "name": "Circl Dating App",
-      "description": "Dating app",
+      "createdFor": "LAUNCH Hackathon 2015",
+      "description": "A social dating app designed so you can be involved with choosing your friend's dates",
       "github": "https://github.com/stephenball1/Twinkle",
       "stack": "Android app in Java, Firebase",
       "images": [
@@ -12,11 +13,25 @@
           "static/circl_chat.jpg"
         ]
       ],
-      "involvedWith": []
+      "involvedWith": [
+        ["Create model structure for binding Firebase to app"],
+        ["Build out chat, profile, and login views"],
+        ["General performance optimizations"]
+      ],
+			"press": [
+				[
+					{
+            "url": "http://challengepost.com/software/circl-dating-app",
+						"text": "Winner"
+					},
+          " of the Firebase sponsor prize"
+				]
+			]
     },
     {
       "slug": "office-street-view",
       "name": "Office Street View",
+      "createdFor": "Internal Room 77 hackathon",
       "description": "Navigate through an office and meet the employees!",
       "stack": "AngularJS, Sass, PHP",
       "github": "https://github.com/golmansax/office-street-view",
@@ -24,34 +39,49 @@
         "/static/office-street-view_1.jpg",
         "/static/office-street-view_2.jpg"
       ],
-      "involvedWith": []
+      "involvedWith": [
+        ["Everything from coding and design to maintenence"]
+      ]
     },
     {
       "slug": "personal-site",
       "name": "Personal Site",
       "url": "http://golmansax.com",
       "github": "https://github.com/golmansax/my-site-in-express",
-      "description": "Personal website",
+      "description": "A portfolio of projects that I have worked on",
       "stack": "ExpressJS, ES6, ReactJS",
       "images": [
         "/static/personal-site.jpg"
       ],
-      "involvedWith": []
+      "involvedWith": [
+        ["Everything from coding and design to maintenence"]
+      ]
     },
     {
       "slug": "chip-in",
       "name": "Chip In",
-      "description": "Volunteer platform",
-      "stack": "Rails, AngularJS",
-      "involvedWith": []
+      "createdFor": "LAUNCH Hackathon 2014",
+      "description": [
+        "A social, volunteering platform created to encourage users to ",
+        "volunteer, and make it easier to find opportunities"
+      ],
+      "stack": "Rails, AngularJS, PostgreSQL",
+      "involvedWith": [
+        ["Front-end coding and design"]
+      ]
     },
     {
       "slug": "battlecode-2015",
-      "name": "Battlecode 2015",
+      "name": "Zasshu",
+      "createdFor": "Battlecode 2015",
       "github": "https://github.com/y4n9squared/battlecode",
-      "description": "Volunteer platform",
+      "description": [
+        "An autonomous program that plays the computer game Battlecode"
+      ],
       "stack": "Java",
-      "involvedWith": []
+      "involvedWith": [
+        ["Developing and coding game strategy"]
+      ]
     }
   ]
 }
