--- a/locales/en/work_projects.json
+++ b/locales/en/work_projects.json
@@ -7,8 +7,8 @@
 			"images": [
 				"/90921e0249/static/chalk.jpg"
 			],
-			"description": "A form system",
-			"stack": "Rails, Backbone + ReactJS, Haml, Bootstrap + Sass, PostgreSQL, Heroku",
+			"description": "A digital workflow system created for K-12 schools and school districts",
+			"stack": "Rails, Backbone + ReactJS, Haml, Bootstrap + Sass, PostgreSQL",
 			"positions": [
 				{
 					"title": "Software Engineer",
@@ -18,18 +18,8 @@
 			],
 			"joinedWhen": "Team had 3 employees (2 engineers)",
 			"involvedWith": [
-				[
-					"Creating the engineering culture"
-				],
-				[
-					"Practice agile development through full code coverage and strong integration tests"
-				],
-				[
-					"Focus on customer satisfaction through integrating user feedback and fast response times to support requests"
-				],
-				[
-					"Full stack of website development, from code architecting to frontend design"
-				]
+				["Full stack of website development, from code architecting to frontend design"],
+				["Help create an engineering culture that values collaboration and a strong testing suite"]
 			]
 		},
 		{
@@ -39,8 +29,8 @@
 			"images": [
 				"/039296b2cf/static/amass.jpg"
 			],
-			"description": "A platform for filmmakers and organizations to meet",
-			"stack": "Rails, AngularJS, Haml, Foundation + Sass, MongoDB, Heroku",
+			"description": "Connecting socially-conscious filmmakers and organizations",
+			"stack": "Rails, AngularJS, Haml, Foundation + Sass, MongoDB",
 			"positions": [
 				{
 					"title": "Advisor",
@@ -48,8 +38,12 @@
 					"end": "Current"
 				}
 			],
-			"involvedWith": []
-		},
+			"involvedWith": [
+				["Work directly with the founders on product strategy"],
+				["Design and coded the landing site"],
+				["Conduct product and technical interviews"]
+      ]
+    },
 		{
       "slug": "room-77",
 			"name": "Room 77",
@@ -60,7 +54,7 @@
           "/53f7a9b79c/static/room-77_2.jpg"
         ]
 			],
-			"description": "A good hotel search",
+			"description": "Search across dozens of hotel sites to find the best price",
 			"stack": "AngularJS, Sass, PHP",
 			"positions": [
 				{
@@ -70,7 +64,10 @@
 				}
 			],
 			"joinedWhen": "Team had 15 employees (6 engineers)",
-			"involvedWith": [],
+			"involvedWith": [
+        ["Design and implement a native-like HTML5 and Angular JS single-page mobile app framework"],
+        ["Occasional forays into backend and production infrastructure projects"]
+      ],
 			"press": [
 				[
 					"Company was ",
