--- a/locales/en/app.json
+++ b/locales/en/app.json
@@ -2,9 +2,10 @@
 	"metaData": {
 		"resume": {
 			"description": "Personal site of Holman Gao, software engineer at Chalk Schools, University of Maryland and Blair Magnet alum, living in San Francisco",
-			"title": "Holman Gao"
+			"title": "Resume"
 		},
 		"portfolio": {
+			"description": "Personal site of Holman Gao, software engineer at Chalk Schools, University of Maryland and Blair Magnet alum, living in San Francisco",
 			"title": "Portfolio"
 		},
 		"hcd": {
