--- a/locales/en/app.json
+++ b/locales/en/app.json
@@ -6,7 +6,7 @@
 		},
 		"portfolio": {
 			"description": "Personal site of Holman Gao, software engineer at Chalk Schools, University of Maryland and Blair Magnet alum, living in San Francisco",
-			"title": "Portfolio"
+			"title": "Holman Gao"
 		},
 		"hcd": {
 			"title": "Human-Centered Design"
