--- a/locales/en/side_projects.json
+++ b/locales/en/side_projects.json
@@ -58,6 +58,24 @@
       ]
     },
     {
+      "slug": "27-percenters",
+      "name": "27 Percenters",
+      "createdFor": "National Day of Civic Hacking – San Francisco 2015",
+      "description": [
+        "Help reduce the poverty gap in San Francisco by sending ",
+        "micro-donations to kids in need"
+      ],
+      "images": [
+        ["/static/27-percenters_profile.jpg", "/static/27-percenters_search.jpg"],
+        ["/static/27-percenters_home.jpg", "/static/27-percenters_settings.jpg"]
+      ],
+      "stack": "Ionic, AngularJS, Sass, Firebase, Appetize",
+      "involvedWith": [
+        ["Front-end coding and design"],
+        ["Use AngularFire to bind Firebase to the frontend"]
+      ]
+    },
+    {
       "slug": "chip-in",
       "name": "Chip In",
       "createdFor": "LAUNCH Hackathon 2014",
