--- a/locales/en/side_projects.json
+++ b/locales/en/side_projects.json
@@ -69,6 +69,7 @@
         ["/static/27-percenters_profile.jpg", "/static/27-percenters_search.jpg"],
         ["/static/27-percenters_home.jpg", "/static/27-percenters_settings.jpg"]
       ],
+      "github": "https://github.com/27percenters/27percenters",
       "stack": "Ionic, AngularJS, Sass, Firebase, Appetize",
       "involvedWith": [
         ["Front-end coding and design"],
