Use router for community projects as well

--- a/locales/en/app.json
+++ b/locales/en/app.json
@@ -19,7 +19,10 @@
 		},
 		"sideProjects": {
 			"title": "Side Projects"
-		}
+		},
+    "communityProjects": {
+      "title": "Efforts in Community"
+    }
 	},
 	"work": [
 		{
