Holy eff is this all working???

--- a/locales/en/side_projects.json
+++ b/locales/en/side_projects.json
@@ -9,8 +9,8 @@
       "stack": "Android app in Java, Firebase",
       "images": [
         [
-          "static/circl_match.jpg",
-          "static/circl_chat.jpg"
+          "/static/circl_match.jpg",
+          "/static/circl_chat.jpg"
         ]
       ],
       "involvedWith": [
