--- a/locales/en/resume.json
+++ b/locales/en/resume.json
@@ -282,13 +282,15 @@
 					},
 					", ",
 					{
-						"url": "/human-centered-design",
-						"text": "human-centered design"
+            "text": "human-centered design",
+            "routeName": "communityProject",
+            "params": { "projectId": "human-centered-design" }
 					},
 					", ",
 					{
-						"url": "/donations-pledge",
-						"text": "my donations pledge"
+						"text": "my donations pledge",
+            "routeName": "communityProject",
+            "params": { "projectId": "my-donations-pledge" }
 					}
 				]
 			]
