--- a/locales/en/community_projects.json
+++ b/locales/en/community_projects.json
@@ -82,7 +82,7 @@
 			"name": "My Donations Pledge",
 			"description": [
 				"After obtaining my undergraduate degree, I made a pledge to donate ",
-				"cash every year on my birthday, to support organizations that I feel ",
+				"money every year on my birthday, to support organizations that I feel ",
 				"are making a positive impact in society. All of the organizations ",
 				"that I have chosen so far are ones that have helped me become who I ",
 				"am today."
@@ -93,9 +93,16 @@
 					"attrs": {
 						"donations": [
 							{
-								"year": 2015,
+								"year": 2016,
 								"organization": {
 									"text": "TBD"
+								}
+							},
+							{
+								"year": 2015,
+								"organization": {
+                  "url": "http://www.mbhsmagnet.org/",
+                  "text": "Montgomery County ARML Team"
 								}
 							},
 							{
